Salesforce/main/default/objects/Asignacion_de_Oferta__c/Asignacion_de_Oferta__c.object-meta.xml
<CustomObject>
    <label>Asignacion de Oferta</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nombre de Asignacion de Oferta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asignaciones de Oferta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>