Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>