Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Asig_Prod_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Asig_Prod_Despacho__c</fullName>
    <formula>If(Prod_Subtotal__c != 0, Prod_Despacho__c / Prod_Subtotal__c * Cantidad_Asignada__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asig Prod Despacho</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>