Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/CAC__c.field-meta.xml
<CustomField>
    <fullName>CAC__c</fullName>
    <description>Coeficiente auxiliar de calculo</description>
    <label>CAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>