Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Cantidad_Asignada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Asignada__c</fullName>
    <label>Cantidad Asignada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>