Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Asignaciones de Oferta</relationshipLabel>
    <relationshipName>Asignaciones_de_Oferta</relationshipName>
    <type>Lookup</type>
</CustomField>