Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Com_Adm_Exedente__c.field-meta.xml
<CustomField>
    <fullName>Com_Adm_Exedente__c</fullName>
    <label>Com Adm. Exedente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>