Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Com_Pedido_Complementar__c.field-meta.xml
<CustomField>
    <fullName>Com_Pedido_Complementar__c</fullName>
    <label>Com Pedido Complementar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>