Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Com_Relocalizacion__c.field-meta.xml
<CustomField>
    <fullName>Com_Relocalizacion__c</fullName>
    <label>Com Realocação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>