Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Diferencia__c.field-meta.xml
<CustomField>
    <fullName>Diferencia__c</fullName>
    <label>Diferencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>