Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Marca_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Marca_Comercial__c</fullName>
    <formula>TEXT(Producto__r.Variedade__r.Marca_comercial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca Comercial</label>
    <type>Text</type>
</CustomField>