Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Porcentaje_Asignado__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Asignado__c</fullName>
    <formula>Cantidad_Asignada__c / IF(OR(ISNULL(Com_Subtotal__c), Com_Subtotal__c = 0), 1, Com_Subtotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Asignado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>