Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Prod_Compras_Entrada_Mercaderia__c.field-meta.xml
<CustomField>
    <fullName>Prod_Compras_Entrada_Mercaderia__c</fullName>
    <label>Prod Compras Entrada Mercaderia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>