Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Prod_Compras_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Prod_Compras_Pedido__c</fullName>
    <label>Prod Compras Pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>