Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Prod_Estoque_Granel__c.field-meta.xml
<CustomField>
    <fullName>Prod_Estoque_Granel__c</fullName>
    <label>Prod Estoque Granel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>