Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Prod_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Prod_Subtotal__c</fullName>
    <label>Prod Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>