Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asignaciones de Oferta</relationshipLabel>
    <relationshipName>Asignaciones_de_Oferta</relationshipName>
    <type>Lookup</type>
</CustomField>