Salesforce/main/default/objects/Asignacion_de_Oferta__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Desarrollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>